- add fix so image covers whole avatar

--- a/source/sass/component/_testimonials.scss
+++ b/source/sass/component/_testimonials.scss
@@ -39,6 +39,12 @@
         border-radius: calc(#{$base} * 1);
         overflow: hidden;
         @include shadow(3);
+
+        &.c-image .c-image__image {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .c-testimonial__header {
